--- a/views/loading.mustache
+++ b/views/loading.mustache
@@ -4,7 +4,7 @@
   <!-- STYLES -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/loading.css" rel="stylesheet" type="text/css" />
 
   <!-- META INFORMATION -->
   <title>Loading...</title>
@@ -77,8 +77,8 @@
           </div>
           <div class="panel-body">
             <div class="progress">
-              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-                <span class="sr-only">45% Complete</span>
+              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                <span class="sr-only">100% Complete</span>
               </div>
             </div>
           </div>
@@ -88,7 +88,10 @@
 
   </div>
   <!-- SCRIPTS -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="//cdn.socket.io/socket.io-1.3.5.js"></script>
+  <script src="/js/loading.js"></script>
 </body>
 
 </html>
