Added server routes

--- a/views/loading.mustache
+++ b/views/loading.mustache
@@ -10,6 +10,8 @@
   <title>Loading...</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <script src="//cdn.jsdelivr.net/blocks/0.3.1/blocks.min.js"></script>
 </head>
 
 <body>
@@ -29,9 +31,9 @@
           </div>
           <div class="panel-body">
             <p style="line-height:38px;">
-              <img class="icon" src="img/icon_players.png">0/0 players
+              <img class="icon" src="img/icon_players.png"><div id="playercount">0/0 players</div>
               <br />
-              <img class="icon" src="img/icon_map.png">undefined
+              <img class="icon" src="img/icon_map.png"><div id="map">undefined</div>
               <br />
               <img class="icon" src="img/icon_ip.png">127.0.0.1:27015
               <br />
@@ -45,13 +47,13 @@
           </div>
           <div class="panel-body">
             <p style="line-height:38px;">
-              <img class="icon" src="img/icon_user.png" />Undefined
+              <img class="icon" src="img/icon_user.png" /><div id="playername">Undefined</div>
               <br />
-              <img class="icon" src="img/icon_id.png">STEAM_0:0:0
+              <img class="icon" src="img/icon_id.png"><div id="steamid">STEAM_0:0:0</div>
               <br />
-              <img class="icon" src="img/icon_bananas.png" />0 bananas
+              <img class="icon" src="img/icon_bananas.png" /><div id="bananas">0 bananas</div>
               <br />
-              <img class="icon" src="img/icon_time.png" />0 hours
+              <img class="icon" src="img/icon_time.png" /><div id="time">0 hours</div>
             </p>
           </div>
         </div>
